[metadata]
name = evbilling
version = attr: evbilling.__version__
author = Keith Gorlen
author_email = kgorlen@gmail.com
description = Produce EV charger submeter bills for PG&E BEV-1 rate schedule.
long_description = file: README.md, LICENSE.txt
url = https://github.com/kgorlen/EVBilling
keywords = PG&E, EV Charger, Billing
license = GPL-3.0-or-later
classifiers = 
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent
    
[options]
include_package_data = True
package_dir=
    =src
packages = find:
python_requires = >=3.9
install_requires =
    build>=1.2.2.post1
    fpdf2>=2.8.1
    keyring>=25.6.0
    matplotlib>=3.9.2
    mplcursors>=0.6
    numpy<2
    pdfplumber>=0.11.4
    platformdirs>=4.3.6
    pyemvue>=0.18.9
    rapidfuzz>=3.14.3
    requests>=2.32.3
    tzlocal>=5.2
    urllib3>=2.2.3

[options.packages.find]
where=src

[options.package_data]
evbilling =
    *.jpg
    *.png

[options.entry_points]
console_scripts =
    evbilling = evbilling.evbilling:cli
    evtariffs = evbilling.evtariffs:cli
    mailevbills = evbilling.mailevbills:cli
    runevbilling = evbilling.runevbilling:main
